fix: confusing expand/collapse buttons inside action group #3939

--- a/webui/src/scss/_button-edit.scss
+++ b/webui/src/scss/_button-edit.scss
@@ -181,6 +181,8 @@ table.variables-table,
 		}
 
 		.cell-children {
+			margin-top: 0.5rem;
+
 			h4 {
 				margin-top: 0 !important;
 			}
